fixed the title spacing

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,6 @@ h1,
 }
 .logo a {
   font-family: "IBM";
-  letter-spacing: -1px;
   position: relative;
   font-size: larger;
 }
